force-app/main/default/objects/Process_Definition__c/Process_Definition__c.object-meta.xml
<CustomObject>
    <label>Process Definition</label>
    <nameField>
        <label>Process Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>