force-app/main/default/objects/Process_Definition__c/fields/Modal_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Modal_Component_Name__c</fullName>
    <label>Modal Component Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>