force-app/main/default/objects/Process_Definition__c/fields/Variation_Id__c.field-meta.xml
<CustomField>
    <fullName>Variation_Id__c</fullName>
    <label>Variation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>